force-app/main/default/objects/WorkOrder/fields/Account_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>Account_at_Risk__c</fullName>
    <formula>Account.Account_at_Risk__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account at Risk</label>
    <type>Checkbox</type>
</CustomField>