force-app/main/default/objects/WorkOrder/fields/Account_Reporting_Details__c.field-meta.xml
<CustomField>
    <fullName>Account_Reporting_Details__c</fullName>
    <formula>Account.Detailing_Reporting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Reporting Details</label>
    <type>Checkbox</type>
</CustomField>