force-app/main/default/objects/WorkOrder/fields/Assigned_Resources_AccPac_Rep_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Resources_AccPac_Rep_Numbers__c</fullName>
    <label>Resource AccPac Rep Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>