force-app/main/default/objects/WorkOrder/fields/Assigned_Resources_Names__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Resources_Names__c</fullName>
    <label>Service Resources</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>