force-app/main/default/objects/WorkOrder/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <label>Building</label>
    <length>25</length>
    <type>Text</type>
</CustomField>