force-app/main/default/objects/WorkOrder/fields/Cannot_Complete_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cannot_Complete_Reason__c</fullName>
    <label>Cannot Complete Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broken Unit</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Construction / Renovation</fullName>
            </value>
            <value>
                <fullName>Misc. / Other</fullName>
            </value>
            <value>
                <fullName>Missing Unit</fullName>
            </value>
            <value>
                <fullName>No Access</fullName>
            </value>
            <value>
                <fullName>No Bar Code</fullName>
            </value>
            <value>
                <fullName>Not ready</fullName>
            </value>
            <value>
                <fullName>Refused Service</fullName>
            </value>
            <value>
                <fullName>Scanner Malfunction</fullName>
            </value>
            <value>
                <fullName>Stall Locked</fullName>
            </value>
            <value>
                <fullName>Vacant</fullName>
            </value>
            <value>
                <fullName>Could not find unit</fullName>
            </value>
            <value>
                <fullName>Back Order</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Locked from Inside</fullName>
            </value>
            <value>
                <fullName>Pet in Unit</fullName>
            </value>
            <value>
                <fullName>COVID 19 Related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>