force-app/main/default/objects/WorkOrder/fields/Client_Action_Required_CAR__c.field-meta.xml
<CustomField>
    <fullName>Client_Action_Required_CAR__c</fullName>
    <label>Client Action Required (CAR)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sanitation - Drains</fullName>
            </value>
            <value>
                <fullName>Sanitation - Food</fullName>
            </value>
            <value>
                <fullName>Sanitation - Garbage</fullName>
            </value>
            <value>
                <fullName>Sanitation - Other</fullName>
            </value>
            <value>
                <fullName>Structural - Deficiency</fullName>
            </value>
            <value>
                <fullName>Structural - Doors</fullName>
            </value>
            <value>
                <fullName>Structural - Entry/Exit</fullName>
            </value>
            <value>
                <fullName>Storage - Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>