force-app/main/default/objects/WorkOrder/fields/CongaWorkOrderEmail__c.field-meta.xml
<CustomField>
    <fullName>CongaWorkOrderEmail__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;queryid=[wolr]&quot; + $Setup.Conga_and_DocuSign_Settings__c.Replaced_Order_Product_Conga_Query__c + &quot;?pv0=&quot; + Id + 
&quot;&amp;queryid=[wola]&quot; + $Setup.Conga_and_DocuSign_Settings__c.Additions_Conga_Query_Id__c + &quot;?pv0=&quot; + Id + 
&quot;&amp;queryid=[wolcc]&quot; + $Setup.Conga_and_DocuSign_Settings__c.Cannot_Complete_Conga_Query_Id__c + &quot;?pv0=&quot; + Id + 
&quot;&amp;congaemailtemplateid=&quot; + $Setup.Conga_and_DocuSign_Settings__c.Replaced_Order_Product_Conga_Email_Id__c + 
&quot;&amp;emailfromid=&quot; + $Setup.Field_Service_Settings__c.Customer_Success_OWA_Id__c + 
&quot;&amp;emailtoid=&quot; + Order__r.ShipToContactId + 
&quot;&amp;qmode=SendEmail&quot; + 
&quot;&amp;DS7=3&quot; + 
&quot;&amp;SC0=1&quot; + 
&quot;&amp;OCNR=1&quot; + 
&quot;&amp;APIMode=12&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CongaOrderProductWorkOrderEmail</label>
    <type>Text</type>
</CustomField>