force-app/main/default/objects/WorkOrder/fields/Corrective_Action_Request_CAR_Notes__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_Request_CAR_Notes__c</fullName>
    <description>User for Pest techs to capture action required on client side to prevent future issue</description>
    <label>Client Action Required (CAR) Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>