force-app/main/default/objects/WorkOrder/fields/Create_PO_Number_Case__c.field-meta.xml
<CustomField>
    <fullName>Create_PO_Number_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create PO Number Case</label>
    <type>Checkbox</type>
</CustomField>