force-app/main/default/objects/WorkOrder/fields/Create_Quality_Assurance__c.field-meta.xml
<CustomField>
    <fullName>Create_Quality_Assurance__c</fullName>
    <label>Create Quality Assurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow-Up</fullName>
            </value>
            <value>
                <fullName>QA Work Order</fullName>
            </value>
            <value>
                <fullName>QA Work Order and Service Appointment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>