force-app/main/default/objects/WorkOrder/fields/Custom_Priority__c.field-meta.xml
<CustomField>
    <fullName>Custom_Priority__c</fullName>
    <formula>CASE(Account.Customer_Tiers__c, 
&apos;Platinum&apos;,1,
&apos;Gold&apos;,2,
&apos;Silver&apos;,3,
&apos;Bronze&apos;,4,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>