force-app/main/default/objects/WorkOrder/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <formula>TEXT(Service_Appointment__r.Account__r.Customer_Tiers__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Tier</label>
    <type>Text</type>
</CustomField>