force-app/main/default/objects/WorkOrder/fields/DailyServiceAppointment__c.field-meta.xml
<CustomField>
    <fullName>DailyServiceAppointment__c</fullName>
    <formula>HYPERLINK(&quot;/one/one.app?source=aloha#/sObject/00On0000000K5muEAC/view?a:t=1489617705731&quot;, &quot;Report&quot;,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DailyServiceAppointment</label>
    <type>Text</type>
</CustomField>