force-app/main/default/objects/WorkOrder/fields/Days_Until_Service_Appointment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Service_Appointment_Due_Date__c</fullName>
    <formula>IF(Service_Appointment_Due_Date__c - TODAY() &lt; 0, 0, Service_Appointment_Due_Date__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Service Appointment Due Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>