force-app/main/default/objects/WorkOrder/fields/Emergency_Formula__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Formula__c</fullName>
    <formula>IF(Emergency__c, &apos;Emergency&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emergency Formula</label>
    <type>Text</type>
</CustomField>