force-app/main/default/objects/WorkOrder/fields/Follow_Up_Created__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow Up Created</label>
    <type>Checkbox</type>
</CustomField>