force-app/main/default/objects/WorkOrder/fields/FSA__c.field-meta.xml
<CustomField>
    <fullName>FSA__c</fullName>
    <formula>LEFT(PostalCode, 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSA</label>
    <type>Text</type>
</CustomField>