force-app/main/default/objects/WorkOrder/fields/Full_Exchange_Items__c.field-meta.xml
<CustomField>
    <fullName>Full_Exchange_Items__c</fullName>
    <description>The number of concept work order line items</description>
    <label>Full Exchange Items</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.isFullExchange__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>