force-app/main/default/objects/WorkOrder/fields/General_Comments__c.field-meta.xml
<CustomField>
    <fullName>General_Comments__c</fullName>
    <label>General Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>