force-app/main/default/objects/WorkOrder/fields/HasBeenDispatched__c.field-meta.xml
<CustomField>
    <fullName>HasBeenDispatched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasBeenDispatched</label>
    <type>Checkbox</type>
</CustomField>