force-app/main/default/objects/WorkOrder/fields/HasBeenRescheduled__c.field-meta.xml
<CustomField>
    <fullName>HasBeenRescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasBeenRescheduled</label>
    <type>Checkbox</type>
</CustomField>