force-app/main/default/objects/WorkOrder/fields/HasPestControlMonthly__c.field-meta.xml
<CustomField>
    <fullName>HasPestControlMonthly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasPestControlMonthly</label>
    <type>Checkbox</type>
</CustomField>