force-app/main/default/objects/WorkOrder/fields/Id_Casesafe__c.field-meta.xml
<CustomField>
    <fullName>Id_Casesafe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id (Casesafe)</label>
    <type>Text</type>
</CustomField>