force-app/main/default/objects/WorkOrder/fields/Installation_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Installation_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation Ticket</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Installation Work Orders</relationshipLabel>
    <relationshipName>Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>