force-app/main/default/objects/WorkOrder/fields/Is_Work_Order_Valid_for_Reset_SAs__c.field-meta.xml
<CustomField>
    <fullName>Is_Work_Order_Valid_for_Reset_SAs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Work Order Valid for Reset SAs</label>
    <type>Checkbox</type>
</CustomField>