force-app/main/default/objects/WorkOrder/fields/IsRecurring__c.field-meta.xml
<CustomField>
    <fullName>IsRecurring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRecurring</label>
    <type>Checkbox</type>
</CustomField>