force-app/main/default/objects/WorkOrder/fields/IsSeasonal__c.field-meta.xml
<CustomField>
    <fullName>IsSeasonal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSeasonal</label>
    <type>Checkbox</type>
</CustomField>