force-app/main/default/objects/WorkOrder/fields/isValid__c.field-meta.xml
<CustomField>
    <fullName>isValid__c</fullName>
    <formula>(Last_Batch_Updated_Date__c = TODAY() || Last_Batch_Updated_Date__c = TODAY() + (-1)) &amp;&amp; TEXT(StatusCategory) &lt;&gt; &apos;Completed&apos; &amp;&amp; TEXT(StatusCategory) &lt;&gt; &apos;Cannot Complete&apos; &amp;&amp; TEXT(StatusCategory) &lt;&gt; &apos;Dispatched&apos;</formula>
    <label>isValid</label>
    <type>Checkbox</type>
</CustomField>