force-app/main/default/objects/WorkOrder/fields/IsValidForUpdate__c.field-meta.xml
<CustomField>
    <fullName>IsValidForUpdate__c</fullName>
    <description>This formula is used by the filters in the nightly Work Order generation batch to decide whether work orders should be regenerated or updated. Please do not change the formula</description>
    <formula>TEXT( Status ) =&apos;New&apos; ||  TEXT( Status ) =&apos;Scheduled&apos; || TEXT( Status ) =&apos;Dispatched&apos;</formula>
    <inlineHelpText>This formula is used by the filters in the nightly Work Order generation batch to decide whether work orders should be regenerated or updated. Please do not change the formula</inlineHelpText>
    <label>IsValidForUpdate</label>
    <type>Checkbox</type>
</CustomField>