force-app/main/default/objects/WorkOrder/fields/IsValidForUpdateEmergency__c.field-meta.xml
<CustomField>
    <fullName>IsValidForUpdateEmergency__c</fullName>
    <description>This formula is used by Emergency Work Order generation logic. Please do not change the formula</description>
    <formula>Emergency__c &amp;&amp; (TEXT( StatusCategory ) = &apos;New&apos; || TEXT( StatusCategory ) = &apos;In Progress&apos; )</formula>
    <inlineHelpText>This formula is used by Emergency Work Order generation logic. Please do not change the formula</inlineHelpText>
    <label>IsValidForUpdateEmergency</label>
    <type>Checkbox</type>
</CustomField>