force-app/main/default/objects/WorkOrder/fields/Last_Batch_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Batch_Updated_Date__c</fullName>
    <label>Last Batch Updated Date</label>
    <type>Date</type>
</CustomField>