force-app/main/default/objects/WorkOrder/fields/LEED_Customer__c.field-meta.xml
<CustomField>
    <fullName>LEED_Customer__c</fullName>
    <formula>TEXT(Account.LEED_Customer__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LEED Customer</label>
    <type>Text</type>
</CustomField>