force-app/main/default/objects/WorkOrder/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <inlineHelpText>Enter a descriptive name for the new location</inlineHelpText>
    <label>Location Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>