force-app/main/default/objects/WorkOrder/fields/New_Location__c.field-meta.xml
<CustomField>
    <fullName>New_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Location</label>
    <type>Checkbox</type>
</CustomField>