force-app/main/default/objects/WorkOrder/fields/Next_Scheduled_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Next_Scheduled_Appointment__c</fullName>
    <description>Date field that shows the Next Scheduled Service Appointment</description>
    <label>Next Scheduled Appointment</label>
    <type>DateTime</type>
</CustomField>