force-app/main/default/objects/WorkOrder/fields/Number_of_Replaced_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Replaced_Products__c</fullName>
    <inlineHelpText>The total number of products that were replaced by the technician while on site for a Pest Emergency.</inlineHelpText>
    <label>Number of Replaced Products</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Has_Order_Product_Been_Replaced__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>