force-app/main/default/objects/WorkOrder/fields/Order_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Reference_Number__c</fullName>
    <formula>Order__r.OrderReferenceNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Order #</label>
    <type>Text</type>
</CustomField>