force-app/main/default/objects/WorkOrder/fields/Parking_Fine_Penalty_Amount__c.field-meta.xml
<CustomField>
    <fullName>Parking_Fine_Penalty_Amount__c</fullName>
    <label>Parking Fine/Penalty Amount</label>
    <summarizedField>Visit_Expense__c.Expense_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Visit_Expense__c.Type__c</field>
        <operation>equals</operation>
        <value>Parking Ticket</value>
    </summaryFilterItems>
    <summaryForeignKey>Visit_Expense__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>