force-app/main/default/objects/WorkOrder/fields/Priority_Derived__c.field-meta.xml
<CustomField>
    <fullName>Priority_Derived__c</fullName>
    <label>Priority (Derived)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>