force-app/main/default/objects/WorkOrder/fields/Product_Summary__c.field-meta.xml
<CustomField>
    <fullName>Product_Summary__c</fullName>
    <description>On dispatch stores the summary of work order locations and related products</description>
    <label>Product Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>