force-app/main/default/objects/WorkOrder/fields/QA_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>QA_Completed_Date__c</fullName>
    <label>QA Completed Date</label>
    <type>Date</type>
</CustomField>