force-app/main/default/objects/WorkOrder/fields/QA_Notes__c.field-meta.xml
<CustomField>
    <fullName>QA_Notes__c</fullName>
    <label>QA Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>