force-app/main/default/objects/WorkOrder/fields/QA_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>QA_Requested_Date__c</fullName>
    <label>QA Requested Date</label>
    <type>Date</type>
</CustomField>