force-app/main/default/objects/WorkOrder/fields/Quick_Action__c.field-meta.xml
<CustomField>
    <fullName>Quick_Action__c</fullName>
    <label>Quick Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create Follow Up</fullName>
            </value>
            <value>
                <fullName>Create QA Work Order</fullName>
            </value>
            <value>
                <fullName>Create QA Work Order &amp; Service Appointment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>