force-app/main/default/objects/WorkOrder/fields/Repair_Completed__c.field-meta.xml
<CustomField>
    <fullName>Repair_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicate if a repair was done and completed as part of this Work Order</inlineHelpText>
    <label>Repair Completed</label>
    <type>Checkbox</type>
</CustomField>