force-app/main/default/objects/WorkOrder/fields/Repair_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Repair_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repair Ticket</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>