force-app/main/default/objects/WorkOrder/fields/Scanned_In__c.field-meta.xml
<CustomField>
    <fullName>Scanned_In__c</fullName>
    <inlineHelpText>List of barcodes that were scanned in</inlineHelpText>
    <label>Scanned In</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>