force-app/main/default/objects/WorkOrder/fields/Scanned_Out__c.field-meta.xml
<CustomField>
    <fullName>Scanned_Out__c</fullName>
    <inlineHelpText>List of barcodes that were scanned out</inlineHelpText>
    <label>Scanned Out</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>