force-app/main/default/objects/WorkOrder/fields/Send_Post_Installation_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_Post_Installation_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is checked by code to send out a post installation survey to the Order&apos;s Ship-to Contact.</description>
    <label>Send Post Installation Survey</label>
    <type>Checkbox</type>
</CustomField>