force-app/main/default/objects/WorkOrder/fields/SendToSage__c.field-meta.xml
<CustomField>
    <fullName>SendToSage__c</fullName>
    <formula>ISPICKVAL(StatusCategory, &apos;Completed&apos;) &amp;&amp; (Completed_Date__c &gt;= (TODAY() - 90)) &amp;&amp; (Completed_Date__c &lt;= TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SendToSage</label>
    <type>Checkbox</type>
</CustomField>