force-app/main/default/objects/WorkOrder/fields/Service_Appointment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Due_Date__c</fullName>
    <formula>Service_Appointment__r.DueDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Appointment Due Date</label>
    <type>Date</type>
</CustomField>