force-app/main/default/objects/WorkOrder/fields/Service_Appointment_Duration__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Duration__c</fullName>
    <formula>Service_Appointment__r.Duration</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Appointment Duration (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>