force-app/main/default/objects/WorkOrder/fields/Signature_Required__c.field-meta.xml
<CustomField>
    <fullName>Signature_Required__c</fullName>
    <description>Part of Tech feedback request, this field will be added to the Compact layout, which in turn will be displayed on the Work Oder overview screen so that Tech&apos;s know whether or not a Signature is required.</description>
    <formula>IF(
OR(
TEXT(Line_of_Business__c) = &quot;Pest Control&quot;,
TEXT(Type__c) =&quot;Delivery&quot;,
Account.VMI__c = true,
INCLUDES(Account.Site_Survey__r.Signature_Required_For__c, &quot;Hygiene&quot;) &amp;&amp;  TEXT(Line_of_Business__c) = &quot;Hygiene&quot;,
INCLUDES(Account.Site_Survey__r.Signature_Required_For__c, &quot;Life Safety&quot;) &amp;&amp; TEXT(Line_of_Business__c) = &quot;Hygiene&quot;,
INCLUDES(Account.Site_Survey__r.Signature_Required_For__c, &quot;Chemical&quot;) &amp;&amp; TEXT(Line_of_Business__c) = &quot;Chemical&quot;
),
 WorkOrderNumber &amp;&quot; - &quot;&amp; $Label.Signature_Required_YES, WorkOrderNumber &amp;&quot; - &quot;&amp; $Label.Signature_Required_NO)</formula>
    <label>Signature Required</label>
    <type>Text</type>
</CustomField>