force-app/main/default/objects/WorkOrder/fields/Site_Survey_Notes__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey_Notes__c</fullName>
    <label>Site Survey Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>